docs/versioned_docs/version-2.0.0/reference/blocks.mdx
<!-- Generated by port_legacy_docs.py v2 from v2.0.0 (9e9a4caeab258f2b564d6c219d328c45ae3d9347). Historical snapshot—do not edit directly. -->

<a id="blocks"></a>
# Blocks

**Blocks** are the top-level visual building units of a Slack message. A `Message` is a list of blocks, rendered top-to-bottom in Slack.

For a side-by-side gallery of every block type with code, JSON, and Slack screenshots, see [Using Blocks](/v2.0.0/usage/using_blocks).

For the elements that go *inside* blocks (buttons, menus, date pickers, etc.) see [Elements](/v2.0.0/reference/elements).

Slack reference: [https://api.slack.com/reference/block-kit/blocks](https://api.slack.com/reference/block-kit/blocks)

### ActionsBlock {#blocks.ActionsBlock}

**Class**

```python
ActionsBlock(elements: list[Element] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `Block` that is used to hold interactive elements (normally for users to interface with).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `list[Element] \| None` | a list of [Elements](/v2.0.0/reference/elements)<br />(up to a maximum of 25). |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the items in `elements` are invalid. |

</div>

#### from_dict classmethod {#blocks.ActionsBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ActionsBlock
```

Parse a Slack ``actions`` block payload.

Currently raises ``NotImplementedError`` because round-tripping
depends on parsing nested elements; ``Element.from_dict`` will land
in Phase 7.4b.

### Block {#blocks.Block}

**Class**

```python
Block(type_: BlockType, block_id: str | None = None)
```

<div className="api-docstring">

Basis block containing attributes and behaviour common to all blocks.
N.B: Block is an abstract class and cannot be sent directly.

</div>

#### from_dict classmethod {#blocks.Block.from_dict}

```python
from_dict(data: dict[str, Any]) -> Block
```

Parse a Slack block payload back into the appropriate ``Block`` subclass.

Reads ``data["type"]`` and dispatches to the matching subclass's
``from_dict``.

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `MissingRequiredError` | if ``data["type"]`` is absent. |
| `TypeMismatchError` | if ``data["type"]`` is not a recognised<br />block type. |
| `NotImplementedError` | when the block type is recognised but its<br />round-trip parser depends on a part of the API that is not<br />yet implemented (currently: ``RichTextBlock`` and any block<br />containing elements -- see Phase 7.4b and 7.4c). |

### ContextBlock {#blocks.ContextBlock}

**Class**

```python
ContextBlock(elements: list[Element | CompositionObject] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `ContextBlock` displays contextul message info, including both images and text.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `list[Element \| CompositionObject] \| None` | a list of `Text` objects and `Image` elements. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `elements` are not `Text` or `Image` or exceed 10 items. |

</div>

#### from_dict classmethod {#blocks.ContextBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ContextBlock
```

Parse a Slack ``context`` block payload.

Text elements within the block are parsed back to ``Text``; image
elements raise ``NotImplementedError`` because ``Element.from_dict``
has not yet shipped (Phase 7.4b).

### DividerBlock {#blocks.DividerBlock}

**Class**

```python
DividerBlock(block_id: str | None = None)
```

<div className="api-docstring">

A content divider, like an `&lt;hr&gt;` in HTML, to split up different blocks inside of
a message.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

</div>

#### from_dict classmethod {#blocks.DividerBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> DividerBlock
```

Parse a Slack ``divider`` block payload.

### FileBlock {#blocks.FileBlock}

**Class**

```python
FileBlock(external_id: str, block_id: str | None = None, source: str = 'remote')
```

<div className="api-docstring">

Displays a remote file (e.g. a PDF).

For details on how remote files are exposed to Slack, see
[https://api.slack.com/messaging/files#adding](https://api.slack.com/messaging/files#adding).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `external_id` | `str` | the ID assigned to the remote file when it was added to Slack. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `source` | `str` | always "remote" as per the Slack API (may change in the future). |

</div>

#### from_dict classmethod {#blocks.FileBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> FileBlock
```

Parse a Slack ``file`` block payload.

### HeaderBlock {#blocks.HeaderBlock}

**Class**

```python
HeaderBlock(text: str | Text, block_id: str | None = None)
```

<div className="api-docstring">

A Header Block is a plain-text block that displays in a larger, bold font.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str \| Text` | the text that will be rendered as a heading. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

</div>

#### from_dict classmethod {#blocks.HeaderBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> HeaderBlock
```

Parse a Slack ``header`` block payload.

### ImageBlock {#blocks.ImageBlock}

**Class**

```python
ImageBlock(image_url: str, alt_text: str | None = ' ', title: Text | str | None = None, block_id: str | None = None)
```

<div className="api-docstring">

An Image Block contains a single graphic, accessed by URL.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `image_url` | `str` | the URL pointing to the image file you want to display. |
| `alt_text` | `str \| None` | alternative text for accessibility purposes and when the image fails to load. |
| `title` | `Text \| str \| None` | an optional text title to be presented with the image. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when one or more of the provided args fails validation. |

</div>

#### from_dict classmethod {#blocks.ImageBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> ImageBlock
```

Parse a Slack ``image`` block payload.

### InputBlock {#blocks.InputBlock}

**Class**

```python
InputBlock(label: TextLike, element: Element, dispatch_action: bool = False, block_id: str | None = None, hint: TextLike | None = None, optional: bool = False)
```

<div className="api-docstring">

A block that collects information from users - it can hold a plain-text
input element, a checkbox element, a radio button element, a select
menu element, a multi-select menu element, or a datepicker.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | the name which identifies the input field. |
| `element` | `Element` | an interactive [Element](/v2.0.0/reference/elements)<br />(e.g. a text field). |
| `dispatch_action` | `bool` | whether the [Element](/v2.0.0/reference/elements)<br />should trigger the sending of a `block_actions` payload. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `hint` | `TextLike \| None` | an optional additional guide on what input the user should provide. |
| `optional` | `bool` | whether this input field may be empty when the user submits e.g. the modal. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>

#### from_dict classmethod {#blocks.InputBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> InputBlock
```

Parse a Slack ``input`` block payload.

Currently raises ``NotImplementedError`` because the nested
``element`` requires ``Element.from_dict``, which lands in Phase 7.4b.

### MarkdownBlock {#blocks.MarkdownBlock}

**Class**

```python
MarkdownBlock(text: str, block_id: str | None = None)
```

<div className="api-docstring">

Displays formatted Markdown text. Unlike the `mrkdwn` text style used in
[`SectionBlock`](/v2.0.0/reference/blocks/#blocks.SectionBlock),
`MarkdownBlock` uses **GitHub-flavored Markdown** for richer formatting,
including features like tables and code blocks. Added to Slack in 2024
for AI / agentic app outputs.

See: [https://api.slack.com/reference/block-kit/blocks#markdown](https://api.slack.com/reference/block-kit/blocks#markdown).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the Markdown-formatted text to display (1-12000 characters). |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if `text` is empty or longer than 12000 characters. |

</div>

#### from_dict classmethod {#blocks.MarkdownBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> MarkdownBlock
```

Parse a Slack ``markdown`` block payload.

### RichTextBlock {#blocks.RichTextBlock}

**Class**

```python
RichTextBlock(elements: RichTextObject | list[RichTextObject], block_id: str | None = None)
```

<div className="api-docstring">

A RichTextBlock is used to provide easier rich text formatting
    than standard markdown text (e.g. in a
    [`SectionBlock`](/v2.0.0/reference/blocks/#blocks.SectionBlock))
    and access to text formatting features not available in traditional
    markdown (e.g. strikethrough). See the various rich text elements
    you can include [here](/v2.0.0/reference/rich_text).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `elements` | `RichTextObject \| list[RichTextObject]` | a single [rich text element](/v2.0.0/reference/rich_text)<br />or a list of those elements. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier<br />for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the elements in `elements` are not valid rich<br />text elements. |

</div>

#### from_dict classmethod {#blocks.RichTextBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> RichTextBlock
```

Parse a Slack ``rich_text`` block payload.

Currently raises ``NotImplementedError`` because the rich-text
object hierarchy has a deeply nested element graph; round-tripping
is deferred to Phase 7.4c.

### SectionBlock {#blocks.SectionBlock}

**Class**

```python
SectionBlock(text: TextLike | None = None, block_id: str | None = None, fields: TextLike | list[TextLike] | None = None, accessory: Element | None = None)
```

<div className="api-docstring">

A section is one of the most flexible blocks available -
it can be used as a simple text block, or with any of the
available block elements.

Section blocks can also optionally be given an "accessory,"
which is typically one of the interactive
[Elements](/v2.0.0/reference/elements).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike \| None` | text to include in the block. Can be a string or `Text` object (of either<br />`mrkdwn` or `plaintext` variety). Defaults to markdown if unspecified. One of either<br />`text` or `fields` must be provided. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |
| `fields` | `TextLike \| list[TextLike] \| None` | a list of text objects. One of either `text` or `fields` must be provided. |
| `accessory` | `Element \| None` | an optional [Element](/v2.0.0/reference/elements) object<br />that will take a secondary place in the block (after or to the side of  `text`<br />or `fields`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the provided arguments fail validation checks. |

</div>

#### from_dict classmethod {#blocks.SectionBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> SectionBlock
```

Parse a Slack ``section`` block payload.

Round-trips ``text`` and ``fields``. Raises ``NotImplementedError``
if an ``accessory`` is present, because the accessory is an
``Element`` and ``Element.from_dict`` is not yet implemented
(Phase 7.4b).

### TableBlock {#blocks.TableBlock}

**Class**

```python
TableBlock(rows: list[list[RawText | RichTextObject]], column_settings: list[ColumnSettings] | None = None, block_id: str | None = None)
```

<div className="api-docstring">

A `TableBlock` displays data in a table format.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `rows` | `list[list[RawText \| RichTextObject]]` | a list of lists of `RawText` or `RichTextObject` objects. |
| `column_settings` | `list[ColumnSettings] \| None` | a list of `ColumnSettings` objects. |
| `block_id` | `str \| None` | you can use this field to provide a deterministic identifier for the block. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when items in `rows` are not `RawText` or `RichTextObject` objects. |
| `InvalidUsageError` | when the number of column_settings does not match the number of<br />columns in each row. |
| `InvalidUsageError` | when the number of rows is greater than 100. |
| `InvalidUsageError` | when the number of columns in a row is greater than 20. |
| `InvalidUsageError` | when the number of column_settings is greater than 20. |

</div>

#### _resolve_cell {#blocks.TableBlock._resolve_cell}

```python
_resolve_cell(cell: RawText | RichTextObject) -> dict[str, Any]
```

Resolve a table cell to its JSON representation.

RawText cells are resolved directly.
RichTextObject cells are wrapped in a rich_text structure.

#### from_dict classmethod {#blocks.TableBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> TableBlock
```

Parse a Slack ``table`` block payload.

Currently raises ``NotImplementedError`` because table cells may
contain rich-text objects whose round-trip parser is deferred to
Phase 7.4c.

### VideoBlock {#blocks.VideoBlock}

**Class**

```python
VideoBlock(alt_text: str, thumbnail_url: str, title: TextLike, video_url: str, author_name: str | None = None, block_id: str | None = None, description: TextLike | None = None, provider_icon_url: str | None = None, provider_name: str | None = None, title_url: str | None = None)
```

<div className="api-docstring">

Embeds a video. Used to display video content inside a Slack message,
modal, or App Home tab.

See: [https://api.slack.com/reference/block-kit/blocks#video](https://api.slack.com/reference/block-kit/blocks#video).

Note: Slack restricts which domains may be embedded. The server-side
whitelist (e.g. YouTube, Vimeo) is enforced by Slack on receipt of the
payload, not by this library; supplying an unsupported URL will result
in a Slack API error rather than an `InvalidUsageError` at construction.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `alt_text` | `str` | a plain-text summary of the video, used for accessibility<br />and notifications (max 200 chars). |
| `thumbnail_url` | `str` | a URL pointing to the preview image shown before<br />playback. Must be HTTPS in production usage. |
| `title` | `TextLike` | the title shown above the video player (plain text, max 200<br />chars). A `str` is coerced to `TextType.PLAINTEXT` `Text`. |
| `video_url` | `str` | the URL of the video to embed. Must point to a<br />Slack-supported provider (see Slack's documentation). |
| `author_name` | `str \| None` | optional author name shown beneath the video<br />(max 50 chars). |
| `block_id` | `str \| None` | an optional deterministic identifier for the block. |
| `description` | `TextLike \| None` | optional plain-text description below the video<br />(max 200 chars). A `str` is coerced to `TextType.PLAINTEXT`. |
| `provider_icon_url` | `str \| None` | an optional URL to the provider's icon. |
| `provider_name` | `str \| None` | an optional provider name shown alongside the icon<br />(max 50 chars). |
| `title_url` | `str \| None` | an optional URL to link the title to. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `LengthError` | if any length-constrained string exceeds its limit. |

</div>

#### from_dict classmethod {#blocks.VideoBlock.from_dict}

```python
from_dict(data: dict[str, Any]) -> VideoBlock
```

Parse a Slack ``video`` block payload.
